Fixed scanning issue

--- a/myQRcode/myQRcode/en.lproj/Localizable.strings
+++ b/myQRcode/myQRcode/en.lproj/Localizable.strings
@@ -18,6 +18,11 @@
 "tip_success" = "Tip successful!";
 "tip_success_message" = "Thank you so much for your tip!";
 "loading" = "Loading...";
+"error" = "Error";
+"mail_error" = "There is no mail account configured in Apple Mail. Please contact us at %@";
+"light_icon" = "Light";
+"dark_icon" = "Dark";
+
 
 /* No comment provided by engineer. */
 "" = "";
