--- a/myQRcode/myQRcode/de.lproj/Localizable.strings
+++ b/myQRcode/myQRcode/de.lproj/Localizable.strings
@@ -18,6 +18,10 @@
 "tip_success" = "Erfolgreich myApp unterstützt!";
 "tip_success_message" = "Vielen Dank für Deine Unterstützung!";
 "loading" = "Laden...";
+"error" = "Fehler";
+"mail_error" = "Es ist kein E-Mail Konto in Apple Mail hinterlegt. Bitte kontaktiere uns unter %@";
 
+"light_icon" = "Hell";
+"dark_icon" = "Dunkel";
 /* No comment provided by engineer. */
 "" = "";
