Added support to scan qr codes in images + several design and bug fixes

--- a/myQRcode/Storyboards/de.lproj/History.strings
+++ b/myQRcode/Storyboards/de.lproj/History.strings
@@ -10,3 +10,5 @@
 
 /* Class = "UIBarButtonItem"; title = "Close"; ObjectID = "ZoX-ZB-RjC"; */
 "ZoX-ZB-RjC.title" = "Schließen";
+
+"0GK-nR-pZg.text" = "Keine Einträge vorhanden";
