--- a/myQRcode/Storyboards/en.lproj/History.strings
+++ b/myQRcode/Storyboards/en.lproj/History.strings
@@ -10,3 +10,6 @@
 
 /* Class = "UIBarButtonItem"; title = "Close"; ObjectID = "ZoX-ZB-RjC"; */
 "ZoX-ZB-RjC.title" = "Close";
+
+
+"0GK-nR-pZg.text" = "No entrys yet";
