--- a/myQRcode/Storyboards/en.lproj/Generate.strings
+++ b/myQRcode/Storyboards/en.lproj/Generate.strings
@@ -34,3 +34,26 @@
 
 /* Class = "UILabel"; text = "No QR code generated yet"; ObjectID = "njC-gD-BiU"; */
 "njC-gD-BiU.text" = "No QR code generated yet";
+
+/* Generate View Controller */
+/* Templates Button */
+"beF-PC-LeV.text" = "Templates";
+
+/* Templates View Controller */
+/* Title */
+"ygU-Zj-EFm.title" = "Templates";
+/* Close Button */
+"Z2y-HK-CYq.title" = "Close";
+/* Template Name Placeholder */
+"XNl-he-7ff.text" = "TEMPLATE_NAME";
+
+/* Enter Data to Template View Controller */
+/* Title */
+"wRj-ek-yHH.title" = "Enter Data";
+/* Close Button */
+"Ueu-BN-pe5.title" = "Close";
+/* Segmented Control */
+"snB-Sp-SAz.segmentTitles[0]" = "PLACEHOLDER";
+"snB-Sp-SAz.segmentTitles[1]" = "PLACEHOLDER";
+/* Generate Button */
+"qEO-z9-prC.text" = "Generate QR code";
