--- a/myQRcode/Storyboards/de.lproj/Settings.strings
+++ b/myQRcode/Storyboards/de.lproj/Settings.strings
@@ -15,7 +15,7 @@
 "XYV-nO-z1g.title" = "App Icon ändern";
 
 /* Class = "UILabel"; text = "Unterstütze die Entwicklung"; ObjectID = "aeI-rr-3yC"; */
-"aeI-rr-3yC.text" = "Unterstütze die Entwicklung";
+"aeI-rr-3yC.text" = "myQRcode unterstützen";
 
 /* Class = "UITableViewController"; title = "Einstellungen"; ObjectID = "d3V-32-RIX"; */
 "d3V-32-RIX.title" = "Einstellungen";
@@ -27,7 +27,7 @@
 "e2b-No-H44.text" = "1.0 (XXX)";
 
 /* Class = "UILabel"; text = "myQRcode Kundendienst"; ObjectID = "eg5-mK-YoP"; */
-"eg5-mK-YoP.text" = "myQRcode Kundendienst";
+"eg5-mK-YoP.text" = "myQRcode Support";
 
 /* Class = "UILabel"; text = "Subtitle"; ObjectID = "hgJ-Fo-55b"; */
 "hgJ-Fo-55b.text" = "Subtitle";
@@ -45,7 +45,7 @@
 "tu9-ua-loG.text" = "tip_desc";
 
 /* Class = "UINavigationItem"; title = "App Icon  ändern"; ObjectID = "vBM-oz-4cr"; */
-"vBM-oz-4cr.title" = "App Icon  ändern";
+"vBM-oz-4cr.title" = "App Icon ändern";
 
 /* Class = "UIBarButtonItem"; title = "Schließen"; ObjectID = "vWa-8P-riK"; */
 "vWa-8P-riK.title" = "Schließen";
@@ -55,6 +55,3 @@
 
 /* Class = "UIButton"; normalTitle = "tip_price"; ObjectID = "yPo-Ao-TIM"; */
 "yPo-Ao-TIM.normalTitle" = "tip_price";
-
-/* Class = "UILabel"; text = "App Version"; ObjectID = "yTy-05-oos"; */
-"yTy-05-oos.text" = "App Version";
