--- a/myQRcode/en.lproj/InfoPlist.strings
+++ b/myQRcode/en.lproj/InfoPlist.strings
@@ -3,7 +3,7 @@
   myQRcode
 
   Created by Marc Hein on 23.09.19.
-  Copyright © 2019 Marc Hein Webdesign. All rights reserved.
+  Copyright © 2023 Marc Hein. All rights reserved.
 */
 
 "NSCameraUsageDescription" = "This app needs access to your back camera to scan QR codes";
