--- a/myQRcode/myQRcode/de.lproj/Localizable.strings
+++ b/myQRcode/myQRcode/de.lproj/Localizable.strings
@@ -3,7 +3,7 @@
  myQRcode
  
  Created by Marc Hein on 11.11.18.
- Copyright © 2018 Marc Hein Webdesign. All rights reserved.
+ Copyright © 2023 Marc Hein. All rights reserved.
  */
 
 "Build number" = "Build Nummer";
