--- a/myQRcode/Storyboards/en.lproj/Generate.strings
+++ b/myQRcode/Storyboards/en.lproj/Generate.strings
@@ -2,11 +2,11 @@
 /* Class = "UITabBarItem"; title = "Generate"; ObjectID = "Dip-om-eee"; */
 "Dip-om-eee.title" = "Generate";
 
-/* Class = "UITextField"; placeholder = "Content of the QR code"; ObjectID = "DwH-hJ-Ipd"; */
-"DwH-hJ-Ipd.placeholder" = "Content of the QR code";
+/* Class = "UITextField"; placeholder = "Content of the QR-code"; ObjectID = "DwH-hJ-Ipd"; */
+"DwH-hJ-Ipd.placeholder" = "Content of the QR-code";
 
-/* Class = "UITableViewSection"; headerTitle = "QR Code"; ObjectID = "EeJ-pa-ZRx"; */
-"EeJ-pa-ZRx.headerTitle" = "QR Code";
+/* Class = "UITableViewSection"; headerTitle = "QR-Code"; ObjectID = "EeJ-pa-ZRx"; */
+"EeJ-pa-ZRx.headerTitle" = "QR-Code";
 
 /* Class = "UINavigationController"; title = "Navigation"; ObjectID = "GAg-Vh-DJw"; */
 "GAg-Vh-DJw.title" = "Navigation";
@@ -14,14 +14,14 @@
 /* Class = "UITabBarItem"; title = "Item"; ObjectID = "Un4-9b-sBJ"; */
 "Un4-9b-sBJ.title" = "Item";
 
-/* Class = "UIButton"; normalTitle = "Export generated QR code"; ObjectID = "X4f-wI-1Pm"; */
-"X4f-wI-1Pm.normalTitle" = "Export generated QR code";
+/* Class = "UIButton"; normalTitle = "Export generated QR-code"; ObjectID = "X4f-wI-1Pm"; */
+"X4f-wI-1Pm.normalTitle" = "Export generated QR-code";
 
 /* Class = "UITabBarItem"; title = "Generate"; ObjectID = "YWT-57-rL4"; */
 "YWT-57-rL4.title" = "Generate";
 
-/* Class = "UIButton"; normalTitle = "Generate QR code"; ObjectID = "aBE-FK-kol"; */
-"aBE-FK-kol.normalTitle" = "Generate QR code";
+/* Class = "UIButton"; normalTitle = "Generate QR-code"; ObjectID = "aBE-FK-kol"; */
+"aBE-FK-kol.normalTitle" = "Generate QR-code";
 
 /* Class = "UINavigationItem"; title = "myQRcode"; ObjectID = "hFD-uy-cC7"; */
 "hFD-uy-cC7.title" = "myQRcode";
@@ -32,8 +32,8 @@
 /* Class = "UIBarButtonItem"; title = "About"; ObjectID = "mbM-68-iH4"; */
 "mbM-68-iH4.title" = "Settings";
 
-/* Class = "UILabel"; text = "No QR code generated yet"; ObjectID = "njC-gD-BiU"; */
-"njC-gD-BiU.text" = "No QR code generated yet";
+/* Class = "UILabel"; text = "No QR-code generated yet"; ObjectID = "njC-gD-BiU"; */
+"njC-gD-BiU.text" = "No QR-code generated yet";
 
 /* Generate View Controller */
 /* Templates Button */
@@ -56,4 +56,4 @@
 "snB-Sp-SAz.segmentTitles[0]" = "PLACEHOLDER";
 "snB-Sp-SAz.segmentTitles[1]" = "PLACEHOLDER";
 /* Generate Button */
-"qEO-z9-prC.text" = "Generate QR code";
+"qEO-z9-prC.text" = "Generate QR-code";
