--- a/myQRcode/Storyboards/de.lproj/Generate.strings
+++ b/myQRcode/Storyboards/de.lproj/Generate.strings
@@ -5,11 +5,11 @@
 /* Class = "UITabBarItem"; title = "Generieren"; ObjectID = "Dip-om-eee"; */
 "Dip-om-eee.title" = "Generieren";
 
-/* Class = "UITextField"; placeholder = "Inhalt des QR Codes"; ObjectID = "DwH-hJ-Ipd"; */
-"DwH-hJ-Ipd.placeholder" = "Inhalt des QR Codes";
+/* Class = "UITextField"; placeholder = "Inhalt des QR-Codes"; ObjectID = "DwH-hJ-Ipd"; */
+"DwH-hJ-Ipd.placeholder" = "Inhalt des QR-Codes";
 
-/* Class = "UITableViewSection"; headerTitle = "QR Code"; ObjectID = "EeJ-pa-ZRx"; */
-"EeJ-pa-ZRx.headerTitle" = "QR Code";
+/* Class = "UITableViewSection"; headerTitle = "QR-Code"; ObjectID = "EeJ-pa-ZRx"; */
+"EeJ-pa-ZRx.headerTitle" = "QR-Code";
 
 /* Class = "UINavigationController"; title = "Navigation"; ObjectID = "GAg-Vh-DJw"; */
 "GAg-Vh-DJw.title" = "Navigation";
@@ -20,14 +20,14 @@
 /* Class = "UITabBarItem"; title = "Item"; ObjectID = "Un4-9b-sBJ"; */
 "Un4-9b-sBJ.title" = "Item";
 
-/* Class = "UIButton"; normalTitle = "Generierten QR Code exportieren"; ObjectID = "X4f-wI-1Pm"; */
-"X4f-wI-1Pm.normalTitle" = "Generierten QR Code exportieren";
+/* Class = "UIButton"; normalTitle = "Generierten QR-Code exportieren"; ObjectID = "X4f-wI-1Pm"; */
+"X4f-wI-1Pm.normalTitle" = "Generierten QR-Code exportieren";
 
 /* Class = "UITabBarItem"; title = "Generieren"; ObjectID = "YWT-57-rL4"; */
 "YWT-57-rL4.title" = "Generieren";
 
-/* Class = "UIButton"; normalTitle = "QR Code generieren"; ObjectID = "aBE-FK-kol"; */
-"aBE-FK-kol.normalTitle" = "QR Code generieren";
+/* Class = "UIButton"; normalTitle = "QR-Code generieren"; ObjectID = "aBE-FK-kol"; */
+"aBE-FK-kol.normalTitle" = "QR-Code generieren";
 
 /* Class = "UINavigationItem"; title = "myQRcode"; ObjectID = "hFD-uy-cC7"; */
 "hFD-uy-cC7.title" = "myQRcode";
@@ -38,8 +38,8 @@
 /* Class = "UIBarButtonItem"; title = "About"; ObjectID = "jbV-8l-EOS"; */
 "jbV-8l-EOS.title" = "Verlauf";
 
-/* Class = "UILabel"; text = "Bisher kein QR Code generiert"; ObjectID = "njC-gD-BiU"; */
-"njC-gD-BiU.text" = "Bisher kein QR Code generiert";
+/* Class = "UILabel"; text = "Bisher kein QR-Code generiert"; ObjectID = "njC-gD-BiU"; */
+"njC-gD-BiU.text" = "Bisher kein QR-Code generiert";
 
 
 /* Generate View Controller */
@@ -64,4 +64,4 @@
 "snB-Sp-SAz.segmentTitles[0]" = "PLACEHOLDER";
 "snB-Sp-SAz.segmentTitles[1]" = "PLACEHOLDER";
 /* Generate Button */
-"qEO-z9-prC.text" = "QR Code generieren";
+"qEO-z9-prC.text" = "QR-Code generieren";
