--- a/myQRcode/de.lproj/InfoPlist.strings
+++ b/myQRcode/de.lproj/InfoPlist.strings
@@ -6,6 +6,6 @@
   Copyright © 2023 Marc Hein. All rights reserved.
 */
 
-"NSCameraUsageDescription" = "Diese Anwendungs benötigt Zugriff auf die Rückkamera um QR Codes zu scannen";
-"NSPhotoLibraryAddUsageDescription" = "Diese Anwendungs benötigt Zugriff auf deine Fotos, um generierte QR Codes zu speichern";
+"NSCameraUsageDescription" = "Diese Anwendungs benötigt Zugriff auf die Rückkamera um QR-Codes zu scannen";
+"NSPhotoLibraryAddUsageDescription" = "Diese Anwendungs benötigt Zugriff auf deine Fotos, um generierte QR-Codes zu speichern";
 
