--- a/myQRcode/Storyboards/de.lproj/Settings.strings
+++ b/myQRcode/Storyboards/de.lproj/Settings.strings
@@ -1,3 +1,6 @@
+/* Class = "UINavigationController"; title = "Settings"; ObjectID = "mMn-4x-nI7"; */
+"mMn-4x-nI7.title" = "Einstellungen";
+
 
 /* Class = "UILabel"; text = "app_icon_label"; ObjectID = "2dZ-Vw-L95"; */
 "2dZ-Vw-L95.text" = "app_icon_label";
