--- a/myQRcode/myQRcode/de.lproj/Localizable.strings
+++ b/myQRcode/myQRcode/de.lproj/Localizable.strings
@@ -54,5 +54,9 @@
 /* Templates */
 "TEMPLATES_PLACEHOLDER_WIFI_NAME" = "WLAN Name";
 
+/* Instagram */
+"TEMPLATE_INSTAGRAM_USERNAME" = "Benutzername";
+"TEMPLATE_INSTAGRAM_USERNAME_PLACEHOLDER" = "Dein Instagram Benutzername";
+
 /* Settings */
 "SETTINGS_DEVELOPER_GREETING" = "Erstellt mit ❤️ in Trier";
