--- a/myQRcode/myQRcode/en.lproj/Localizable.strings
+++ b/myQRcode/myQRcode/en.lproj/Localizable.strings
@@ -54,5 +54,26 @@
 "TEMPLATE_INSTAGRAM_USERNAME" = "Username";
 "TEMPLATE_INSTAGRAM_USERNAME_PLACEHOLDER" = "Your Instagram username";
 
+/* Twitter */
+"TEMPLATE_TWITTER_USERNAME" = "Username";
+"TEMPLATE_TWITTER_USERNAME_PLACEHOLDER" = "Your Twitter @username";
+
+/* Mail */
+"TEMPLATE_EMAIL_WITH_CONTENT" = "Email with content";
+"TEMPLATE_EMAIL_WITH_CONTENT_RECEIPIENT" = "Recipient";
+"TEMPLATE_EMAIL_WITH_CONTENT_RECEIPIENT_PLACEHOLDER" = "recipient@provider.com";
+
+"TEMPLATE_EMAIL_WITH_CONTENT_SUBJECT" = "Email subject";
+"TEMPLATE_EMAIL_WITH_CONTENT_SUBJECT_PLACEHOLDER" = "Subject";
+
+"TEMPLATE_EMAIL_WITH_CONTENT_BODY" = "Body of the Email";
+"TEMPLATE_EMAIL_WITH_CONTENT_BODY_PLACEHOLDER" = "Message to recipient";
+
 /* Settings */
 "SETTINGS_DEVELOPER_GREETING" = "Created with ❤️ in Trier";
+
+/* Tab Selection */
+"TAB_SELECTION_HEADER" = "Default tab";
+"TAB_GENERATE" = "Generate";
+"TAB_SCAN" = "Scan";
+"TAB_SELECTION_FOOTER" = "Here you can select which tab should be loaded when starting the Mensaplan app.";
