--- a/myQRcode/myQRcode/en.lproj/Localizable.strings
+++ b/myQRcode/myQRcode/en.lproj/Localizable.strings
@@ -31,6 +31,9 @@
 "no_qr_code_error" = "No QR-code";
 "no_qr_code_error_description" = "myQRcode was unable to detect any QR-codes in the selected image";
 
+/* Generate */
+"GENERATE_QR_CODE_PLACEHOLDER" = "Content of the QR-code";
+
 /* Templates */
 /* WiFi Template */
 "wifi_template" = "WiFi login data";
