Added missing localization

--- a/myQRcode/Storyboards/de.lproj/Generate.strings
+++ b/myQRcode/Storyboards/de.lproj/Generate.strings
@@ -43,6 +43,8 @@
 
 
 /* Generate View Controller */
+/* XY Items left placeholder */
+"ZNT-9e-QHC.text" = "XYZ Zeichen verbleibend";
 /* Templates Button */
 "beF-PC-LeV.text" = "Vorlagen";
 /* Use last Templazte Button */
