--- a/myQRcode/Storyboards/en.lproj/Generate.strings
+++ b/myQRcode/Storyboards/en.lproj/Generate.strings
@@ -36,6 +36,9 @@
 "njC-gD-BiU.text" = "No QR-code generated yet";
 
 /* Generate View Controller */
+
+/* XY Items left placeholder */
+"ZNT-9e-QHC.text" = "XYZ charaters left";
 /* Templates Button */
 "beF-PC-LeV.text" = "Templates";
 /* Use last Templazte Button */
