Fixed missing localizations, improved screenshots

--- a/myQRcode/Storyboards/de.lproj/Settings.strings
+++ b/myQRcode/Storyboards/de.lproj/Settings.strings
@@ -2,8 +2,14 @@
 /* Class = "UINavigationController"; title = "Settings"; ObjectID = "mMn-4x-nI7"; */
 "mMn-4x-nI7.title" = "Einstellungen";
 
+
+
 /* Class = "UILabel"; text = "TAB_ON_START"; ObjectID = "gQU-QS-Vls"; */
 "gQU-QS-Vls.text" = "Tab beim Start";
+
+"E0M-Lr-A6I.title" = "Tab beim Start";
+
+"NnH-St-S7B.title" = "Tab beim Start";
 
 /* Class = "UILabel"; text = "app_icon_label"; ObjectID = "2dZ-Vw-L95"; */
 "2dZ-Vw-L95.text" = "app_icon_label";
