Added option to disable history #10

--- a/App/Storyboards/de.lproj/Settings.strings
+++ b/App/Storyboards/de.lproj/Settings.strings
@@ -85,6 +85,8 @@
 "Gzh-hY-dRx.title" = "Standard-Code";
 "CXP-Bp-sFp.title" = "Standard-Code";
 
+"QDY-Sh-Pbp.text" = "Historie deaktivieren";
+
 /* Privacy */
 "Mhq-DC-cDq.text" = "Datenschutz";
 "ggM-jN-5a8.title" = "Datenschutz";
