--- a/App/Storyboards/en.lproj/Settings.strings
+++ b/App/Storyboards/en.lproj/Settings.strings
@@ -79,6 +79,8 @@
 "Gzh-hY-dRx.title" = "Default Code";
 "CXP-Bp-sFp.title" = "Default Code";
 
+"QDY-Sh-Pbp.text" = "Disable History";
+
 /* Privacy */
 "Mhq-DC-cDq.text" = "Privacy";
 "ggM-jN-5a8.title" = "Privacy";
