Added feature to show which template created code in the first place #1

--- a/App/myQRcode/de.lproj/Localizable.strings
+++ b/App/myQRcode/de.lproj/Localizable.strings
@@ -61,6 +61,7 @@
 
 
 /* Templates */
+"TEMPLATE" = "Vorlage";
 /* Categories headlines */
 "TEMPLATE_CATEGORY_SOCIAL" = "Soziale Netzwerke";
 "TEMPLATE_CATEGORY_SOCIAL_MESSAGING" = "Nachrichtendienste";
